--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.badlogicgames.gdx</groupId>
 	<artifactId>gdx-vr</artifactId>
 	<packaging>jar</packaging>
-	<version>1.9.7-SNAPSHOT</version>
+	<version>1.9.7</version>
 
 	<name>gdx-vr</name>
 	<description>libGDX VR extension using OpenVR</description>
@@ -50,8 +50,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<gdx.version>1.9.7-SNAPSHOT</gdx.version>
-		<lwjgl3.version>3.1.2-SNAPSHOT</lwjgl3.version>
+		<gdx.version>1.12.0</gdx.version>
+		<lwjgl3.version>3.3.2</lwjgl3.version>
 	</properties>
 
 	<build>
@@ -76,8 +76,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>8</source>
+					<target>8</target>
 					<fork>true</fork>
 					<showWarnings>true</showWarnings>
 				</configuration>
